--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     .wronglyAnswered {
         color: rgb(255, 0, 0);
     }
+
+    h4 {
+        color: rgb(255, 0, 0);
+    }
 </style>
 
 <body>
@@ -28,6 +32,7 @@
 
             <h2>Prüfungsfragen Sprechfunkerlehrgang</h2>
             <h3>Niedersachsen 05/2022</h3>
+            <h4>Achtung: Es gibt eine neue Version 11/2022, diese Webpage ist nicht auf dem neusten Stand!</h4>
 
             <form action="">
                 <p><input id="randomized" type="checkbox" checked> <label for="randomized">Randomisiert</label></p>
